Fix status visibility on content page

--- a/assets/style.css
+++ b/assets/style.css
@@ -39,6 +39,9 @@
 .structure-tweaks-container .structure-tweaks-status a {
     display: none !important;
 }
+.structure-tweaks-metainfos .structure-tweaks-status.is-hidden {
+    display: none !important;
+}
 
 /**
  * Category splitter
